Chores:arrumando e fazendo alguns testes nos botoes

--- a/CSS/Button.css
+++ b/CSS/Button.css
@@ -6,17 +6,34 @@
 .Home {
     width: 5.75rem;
     height: 2.6rem;
+    max-width: 5.75rem;
+    max-height: 2.6rem;
     font: 200 -2rem/1 'Nunito', sans-seri;
     margin: 2rem 0rem 0rem;
     border-radius: 2rem;
-    background-color: #703CDC;
+    color: #703CDC;
+    background-color: #00051F;
     border: 0;
+    border: 2px solid #703CDC;
     cursor: pointer;
 }
 
+.Home::before {
+    content: '';
+    
+    top: 0;
+    left: -50px;
+    width: 10%;
+    height: 10%;
+    transform: skewX(35deg);
+    background:#703CDC;
+}
+
 .Home:hover {
-    background-color: rgba(138, 106, 204, 0.918)
-        /*padding: 0rem 1rem 0.3rem;*/
+    background-color: rgba(138, 106, 204, 0.918);
+    color: #fff;
+        /*padding: 0rem 1rem 0.3rem;*/ 
+
 }
 
 .Home:active {
