Chores:alterando os botoes deixando mais limpo

--- a/CSS/Button.css
+++ b/CSS/Button.css
@@ -188,7 +188,7 @@ div.retangulo1-move::after {
 }
 
 .retangulo1:hover {
-    background-color: #9ec6ec;
+    background-color: #00051F;
     margin: -14rem 21rem 0rem;
     /* Vou pensar se fica essa ideia mesmo*/
 }
@@ -309,7 +309,7 @@ h3.Projeto2 {
 }
 
 .retangulo2:hover {
-    background-color: #7ddaca;
+    background-color: #00051F;
     margin: -14.4rem 36rem 0rem;
     /* Vou pensar se fica essa ideia mesmo*/
 }
@@ -447,13 +447,13 @@ button.Insta {
 }
 
 img.ImgInsta {
-    width: 3.75rem;
-    height: 3.125rem;
+    width: 3.9rem;
+    height: 3.9rem;
     display: flex;
-    max-width: 60px;
-    max-height: 50px;
+    max-width: 3.6rem;
+    max-height: 3.4rem;
     margin: -5rem 9rem -5rem;
-    border-radius: 1.1rem;
+    border-radius: 50%;
     border: none;
 }
 
@@ -481,14 +481,14 @@ button.Linkedin {
 }
 
 img.imgLink {
-    width: 3.75rem;
-    height: 3.125rem;
+    width: 3.6rem;
+    height: 3.9rem;
     display: flex;
-    max-width: 3.75rem;
-    max-height: 3.125rem;
+    max-width: 3.6rem;
+    max-height: 3.9rem;
     margin: -5rem 9rem -5rem;
     padding: 0;
-    border-radius: 1.1rem;
+    border-radius: 70%;
     border: none;
     grid-column: auto;
     
