--- a/CSS/Button.css
+++ b/CSS/Button.css
@@ -106,6 +106,7 @@
     display: flex;
     background: #00051f65;
     overflow: hidden;   
+    transition: all 0.3s;
 }
 
 h3.Projeto1 {
@@ -189,7 +190,7 @@ div.retangulo1-move::after {
 
 .retangulo1:hover {
     background-color: #00051F;
-    margin: -14rem 21rem 0rem;
+    scale: 1.1;
     /* Vou pensar se fica essa ideia mesmo*/
 }
 
@@ -218,6 +219,8 @@ div.retangulo1-move::after {
     display: flex;
     background: #00051F;
     overflow: hidden;
+    transition: all 0.3s;
+
 }
 
 div.retangulo2-move{
@@ -310,7 +313,8 @@ h3.Projeto2 {
 
 .retangulo2:hover {
     background-color: #00051F;
-    margin: -14.4rem 36rem 0rem;
+    scale: 1.1;
+    /* margin: -14.4rem 36rem 0rem; */
     /* Vou pensar se fica essa ideia mesmo*/
 }
 
@@ -323,13 +327,77 @@ h3.Projeto2 {
 .retangulo3 {
     height: 14.375rem;
     width: 9.875rem;
-    border-radius: 2rem;
-    background-color: #7037CD;
+    
+    position: relative;
+    border-radius: 27px;
+    /*background-color: #68B2F8;*/
     display: flex;
     font: 300 3.1vh 'Nunito', sans-seri;
-    margin: -14.55rem 52rem 0rem;
-    border: 0;
+
+    display: flex;
+    margin: -14.4rem 35rem 0rem;
     text-overflow: ellipsis;
+    border: 0;
+    text-overflow:ellipsis;
+    border: 0;
+    display: flex;
+    background: #00051F;
+    overflow: hidden;
+    transition: all 0.3s;
+    margin: -14.55rem 52rem 0rem;
+}
+
+div.retangulo3-move{
+    content: '';
+    
+    margin: 0px 50px;
+    width: 14rem;
+    max-width: 150px;
+    height: 100%;
+    position: absolute;
+    border-radius: 20px;
+    /* overflow: hidden; */
+}
+
+div.retangulo3-move::before {
+    content: '';
+    width: 6.375rem;
+    height: 16.375rem;
+    margin: -1.1rem -1.5rem 9rem;
+    position: absolute;
+    align-items: center;
+    /* z-index: 10; */
+    display: flex;
+    justify-content: center;
+    border-radius: 1rem;
+    align-items: center;
+    background: linear-gradient(#4bf776, #ebeef6);
+    animation: anim 4s linear infinite;
+}
+
+
+div.retangulo3-move::after {
+    content: '';
+    /* position: absolute; */
+    inset: 4px;
+    background: #00051F;
+}
+
+.retangulo3::after {
+    content: '';
+    position: absolute;
+    inset: 4px;
+    background: #7037CD;
+    border-radius: 16px;
+}
+
+@keyframes anim {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
 
 .Projeto3 {
@@ -345,13 +413,20 @@ h3.Projeto2 {
     width: 6.563rem;
     margin: 1rem 25px 5rem;
     Opacity: 0.8;
-
+    z-index: 10;
     border-radius: 50%;
+}
+
+h3.Projeto3 {
+    position: relative;
+    z-index: 10;
+    color: #000;
 }
 
 .retangulo3:hover {
     background-color: #8b65c9;
-    margin: -14.55rem 51rem 0rem;
+    scale: 1.1;
+    /* margin: -14.55rem 51rem 0rem; */
 }
 
 .retangulo3:active {
@@ -359,6 +434,9 @@ h3.Projeto2 {
     opacity: 0.5;
     animation-duration: 180ms;
 }
+
+
+
 
 .retangulo4 {
     height: 14.375rem;
