--- a/CSS/style_page1.css
+++ b/CSS/style_page1.css
@@ -168,9 +168,9 @@ h4 {
 
     display: grid;
     
-    gap: 1.5rem;
-    align-self: center;
-    justify-self: center;
+    gap: 1.4rem;
+    /* align-self: center; */
+    /* justify-self: center; */
     display: flex;
     padding: 4px;
     /* align-items: center; */
